apps/authelia/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authelia
  namespace: traefik
spec:
  entryPoints:
    - frp
  routes:
    - match: Host(`auth.${DOMAIN}`)
      kind: Rule
      middlewares:
        - name: frp-headers
          namespace: traefik
      services:
        - name: authelia
          port: 80
          namespace: authelia
